JumpScript/tests/baselines/reference/functionOverloads1.errors.txt
tests/cases/compiler/functionOverloads1.jump(1,10): error TS2391: Function implementation is missing or not immediately following the declaration.


==== tests/cases/compiler/functionOverloads1.jump (1 errors) ====
    function foo();
             ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    1+1;
    function foo():string { return "a" }